--- a/closedverse_main/templates/closedverse_main/elements/memo-drawboard.html
+++ b/closedverse_main/templates/closedverse_main/elements/memo-drawboard.html
@@ -13,9 +13,9 @@
       <button type="button" class="artwork-zoom"></button>
       </div>
       <div class="memo-canvas">
-			<canvas id="artwork-canvas" width="320" height="120" zoom="2"></canvas>
-      <canvas id="artwork-canvas-undo" width="320" height="120"></canvas>
-      <canvas id="artwork-canvas-redo" width="320" height="120"></canvas>
+	  <canvas id="artwork-canvas" zoom="2"></canvas>
+      <canvas id="artwork-canvas-undo"></canvas>
+      <canvas id="artwork-canvas-redo"></canvas>
 			<input type="hidden" name="painting" value="">
 			</div>
 			<div class="form-buttons">
