--- a/closedverse_main/templates/closedverse_main/login_page.html
+++ b/closedverse_main/templates/closedverse_main/login_page.html
@@ -18,6 +18,7 @@
 			<div class="ll">
 				<p>If you don't have an account, <a href="{% url "main:signup" %}">you can sign up here.</a></p>
 				<p>If you've forgotten your password or need to reset it, you can <a href="{% url "main:forgot-passwd" %}">do that here.</a></p>
+				<p>If you need help with logging in, check <a href="{% url "main:help-login" %}">this page</a> out.</p>
 			</div>
 		</form>
 	</div>
