--- a/closedverse_main/templates/closedverse_main/help/rules.html
+++ b/closedverse_main/templates/closedverse_main/help/rules.html
@@ -33,8 +33,18 @@
 		<p>Examples are stuff like setting your name to poop, booger, butt, etc. Un-tastefulness isn't welcome. If action is taken on you (like changing your avatar), you're expected to keep it. If you circumvent it once, you are prosecuted to the full extent of the law.</p>
 		<br>
 		<hr>
+		<h2>Annoying the devs</h2>
+		<p>Talking to a developer/admin by commening on their latest post is grounds for a ban. They have many things to do and you commenting on their latest (probably very popular) post is very very annoying, therefore, don't be surprised if you're banned for it. If it's relevant to the post (e.g., feature implementation, then asking about the feature), it's fine, but being totally irreleveant (e.g., asking why your post got deleted on a post having to do with skin) on purpose is a good ban reason.</p>
+		<h2>Followbombing or yeahbombing</h2>
+		<p>The policy on this is that if you're relevant/good/decent in some way, it's okay, otherwise you will (hopefully) be warned or have your follows list/yeahs given deleted entirely.</p>
+		<h2>Joke accounts (miiverse_admin, impostors)</h2>
+		<p>If you make one, it'll make the admins very angry and you will be deleted. Please do not do that.</p>
+		<h2>Impact font memes</h2>
+		<p>These are strictly forbidden and will be deleted immediately. Unironic top text/bottom text memes are not allowed, and you will be warned if it is all you post.</p>
+		<br>
+		<hr>
 		<h2>Repeals</h2>
-		<p>Unless you're too bad, you can get more chances. If we still don't like your behavior, you'll be returned to the state you were.</p>
+		<p>Unless you're too bad, you can get more chances. If we still don't like your behavior, you'll be returned to the state you were. You can probably repeal by emailing an admin or talking to them on Discord or something, I don't know.</p>
 		<h2>Begging for an unban</h2>
 		<p>If you only do it in one session, you'll be forgiven. If you do not stop begging an admin for an unban on a separate messaging site, you will be ignored unless you write a beautifully structured repeal asking why you should have an unban.</p>
 		<br>
@@ -56,8 +66,6 @@
 		<li>Closed</li>
 		</ul><br>
 		<p>If you do make any fanmade content for or about this, don't expect it to be alive, and be ready for it to be taken down by me only because I don't want that many stuff like that for this, and if I do then it'll be official and not user content.</p>
-		<h2>Annoying the devs</h2>
-		<p>Talking to a developer/admin by commening on their latest post is grounds for a ban. They have many things to do and you commenting on their latest (probably very popular) post is very very annoying, therefore, don't be surprised if you're banned for it. If it's relevant to the post (e.g., feature implementation, then asking about the feature), it's fine, but being totally irreleveant (e.g., asking why your post got deleted on a post having to do with skin) on purpose is a good ban reason.</p>
 		<br><br>
 		<h2>Wow, this is way too strict. I am dissatisfied.</h2>
 		<p>If you're unhappy with any of these rules, please keep in mind that <b>these rules are created for a reason</b> and are more of reminders. Admins do not strictly follow all of these. They're mostly here so that users can understand what type of person you should be here.<br>If you contact an admin in regards to a rule, they'll probably clarify it for you.</p>
