--- a/closedverse_main/templates/closedverse_main/man/users.html
+++ b/closedverse_main/templates/closedverse_main/man/users.html
@@ -17,15 +17,14 @@
     <h1 class="window-title"></h1>
     <div class="window-body">
 		<div class="user-info"></div>
-        <form>
+        <form class="goodform">
 			<div class="center-input">
 				<input type="text" name="username" placeholder="Username" value=""><br>
-				<input type="text" name="nickname" placeholder="Nickname" value=""><br>
+				<input type="text" name="email" placeholder="E-mail" value=""><br>
+				<input type="text" name="addr" placeholder="Addr" value=""><br>
 			</div>
 			<br>
 			<input type="checkbox" name="active" value="1"> Is active<br>
-		</form>
-      <form>
         <div class="form-buttons">
           <input type="button" class="olv-modal-close-button gray-button" value="Close">
           <input type="submit" class="post-button black-button" value="Save">
