Some more admin stuff

--- a/closedverse_main/templates/closedverse_main/help/rules.html
+++ b/closedverse_main/templates/closedverse_main/help/rules.html
@@ -42,11 +42,16 @@
 		<h2>Impact font memes</h2>
 		<p>These are strictly forbidden and will be deleted immediately. Unironic top text/bottom text memes are not allowed, and you will be warned if it is all you post.</p>
 		<br>
+		<h2>No avatars</h2>
+		<p>If you don't have an avatar, the chances of you getting banned by any rule is massively increased, and the admins can do literally anything they want with you.</p>
+		<br>
 		<hr>
 		<h2>Repeals</h2>
 		<p>Unless you're too bad, you can get more chances. If we still don't like your behavior, you'll be returned to the state you were. You can probably repeal by emailing an admin or talking to them on Discord or something, I don't know.</p>
 		<h2>Begging for an unban</h2>
 		<p>If you only do it in one session, you'll be forgiven. If you do not stop begging an admin for an unban on a separate messaging site, you will be ignored unless you write a beautifully structured repeal asking why you should have an unban.</p>
+		<h2>Begging to be MODERATOR/admin</h2>
+		<p>If it is all you do, you will be given some restrictions :)</p>
 		<br>
 		<br><h2>Age</h2>
 		<p>Most of the time, it's just a number. We don't explicitly allow users under 13 to join, but if you are found being immature and you are under 13 (or 12), you'll be notified. If You Type Like This, You Will Probably Be Dinged As An Example.</p>
