--- a/closedverse_main/templates/closedverse_main/layout.html
+++ b/closedverse_main/templates/closedverse_main/layout.html
@@ -11,7 +11,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="apple-mobile-web-app-title" content="Closedverse">
-    <meta name="description" content="Openverse is a social network: designed by PF2M, programmed by Arian Kordi. With Miiverse DNA, style and familiar assets such as Miiverse's interface and Miis, you're sure to have fun here!">
+    <meta name="description" content="Closedverse is a social network: designed by PF2M, programmed by Arian Kordi. With Miiverse DNA, style and familiar assets such as Miiverse's interface and Miis, you're sure to have fun here!">
 	<meta property="og:locale" content="en_US">
 	{% if ogdata %}
 		<meta property="og:title" content="{{ ogdata.title }}">
@@ -87,9 +87,10 @@
       <div id="footer">
         <div id="footer-inner">
           <div class="link-container">
+			<p><a href="https://paypal.me/closedverse">Donate</a></p>
 			<p><a href="/help/contact">Contact</a></p>
 			<p><a href="https://github.com/ariankordi/closedverse">GitHub</a></p>
-			<p id="copyright"><a href="https://miiverse.nintendo.net/">Inspired by Hatena Co, Ltd/Nintendo's Miiverse. I don't nor wish to make money from this. Please support them as they deserve your business.</a><br>
+			<p id="copyright"><a href="https://nintendo.com/">Inspired by Hatena Co, Ltd/Nintendo's Miiverse. I don't nor wish to make money from this. Please support them as they deserve your business.</a><br>
 			<a href="https://m.do.co/c/c782a72da538"><img src="https://www.digitalocean.com/assets/media/logos-badges/png/DO_Powered_by_Badge_blue-fe4c6688.png" width="150" height="31"></a></p>
 			</div>
         </div>
