--- a/closedverse_main/templates/closedverse_main/layout.html
+++ b/closedverse_main/templates/closedverse_main/layout.html
@@ -91,7 +91,7 @@
 			<p><a href="/help/contact">Contact</a></p>
 			<p><a href="https://github.com/ariankordi/closedverse">GitHub</a></p>
 			<p id="copyright"><a href="https://nintendo.com/">Inspired by Hatena Co, Ltd/Nintendo's Miiverse. I don't nor wish to make money from this. Please support them as they deserve your business.</a><br>
-			<a href="https://m.do.co/c/c782a72da538"><img src="https://www.digitalocean.com/assets/media/logos-badges/png/DO_Powered_by_Badge_blue-fe4c6688.png" width="150" height="31"></a></p>
+			<a href="https://foxverse.xyz/">Hosted by Foxverse: please give these guys respect!</a></p>
 			</div>
         </div>
       </div>
