--- a/closedverse_main/templates/closedverse_main/man/main.html
+++ b/closedverse_main/templates/closedverse_main/man/main.html
@@ -80,6 +80,16 @@
 			<button class="button">Do it</button>
 		</form>
       </li>
+      <li class="setting-unpurge1">
+        <p class="settings-label">Undelete a user's posts/comments, make them able to change their avatar</p>
+		<form>
+			<div class="center center-input">
+				<input type="hidden" name="action" value="unpurge1">
+				<input type="text" name="username" maxlength="32" placeholder="Username" value="">
+			</div>
+			<button class="button">Do it</button>
+		</form>
+      </li>
 
 
 </ul></div></div></div>
