Fixed users having their own post deletes in audit logs, oops

--- a/closedverse_main/templates/closedverse_main/help/rules.html
+++ b/closedverse_main/templates/closedverse_main/help/rules.html
@@ -5,75 +5,39 @@
 <div class="post-list-outline">
     <h2 class="label">Closedverse Rules</h2>
       <div class="help-content">
-        <p>This page used to only have one rule, but since more problems have risen with only one rule, we have expanded it.</p>
-        <p>Yeah, this page might be long, and it might be strict, but this isn't the Miiverse Code of Conduct.</p>
+        <p>Like any other site, there are rules to keep it from dying. So,</p>
 		
 		<h2>NSFW</h2>
-		<p>At the moment, NSFW stuff is forbidden, unless in messages where the other person is okay with it.<br>We might be implementing an "NSFW community" system, in which someone can post there and not have the posts their in their profile, and also viewing the community will give a warning. If this is implemented, this rule will be edited (not implemented as of October 19)</p>
-		<h2>Offensive content</h2>
-		<p>It isn't okay if a lot of people can see it, or if it's directed at a person/group. This includes offending furries.</p>
-		<h2>Porn/gore</h2>
-		<p>A lot of people don't want to see it. Please do not do that. If you do, lots of users will be happy to snitch you. You will not have any mercy laid on you.</p>
-		<h2>I had to address this too</h2>
-		<p>Please do not say stuff like "ALLAHU AKBAR" or what have you. I'm being serious. Do that on any other forum or well moderated place and you'll be penalized if you do. It's not a "that's offensive to my culture" thing, content like this is removed on lots of sites for a reason. I'm in trouble if you are, alright? I worked hard on this..</p>
-		<h2>Hate speech</h2>
-		<p>This is strongly forbidden. If we can't talk you out of stopping, then no mercy will be laid on you. If you want a free speech allowing social network, please try <a href="https://gab.ai/">GAB</a>. We are NOT welcome to hate and hate speech, and while you might be reasoning with your "free speech", we are very diverse, and that diversity can be easily offended. Yes, there exist people that can be offended.</p>
-		<h2><i>Unwelcome sexual advances</i></h2>
-		<p>Unless you're joking, it's disgusting, please don't. If you are, then you probably don't know what this is.</p>
-		<hr>
-		<h2>Hacking</h2>
-		<p>I'm pretty hack-proof. You don't need to hack me to see my source code, it's available at <a href="https://github.com/ariankordi/closedverse">https://github.com/ariankordi/closedverse</a>.<br>If you can't read that, perhaps you should spend your time figuring out how to.<br>Specifically, I'm using Django. It's free of 99.9999% of injections, so there isn't any point to injecting HTML or SQL. If you do, you'll look like an idiot.</p>
+		<p>No NSFW for now, please.
+		<br>It's allowed in messages if the other person wants it though, and if admins are happy with un-public posts (like in your activity feed, spoilered), then it's fine as well.</p>
+		<h2>Gore</h2>
+		<p>Gore, however, is forbidden everywhere. Please do not.</p>
+		<h2>Illegal content</h2>
+		<p>Nobody has a problem reporting you to the authorities if you do share illegal content here, so please do not.</p>
 		<h2>Spam</h2>
-		<p>Please don't, I have an <s>Amazon Web Services</s> DigitalOcean bill to pay at the end of each month.</p>
-		<h2>Yeahing</h2>
-		<p>This is spam, unless it's legit. We'll let you know if you are doing this, and if you don't learn from any staff telling you to stop, you're not going to be able to yeah ;)<br>Yeah scripts are strictly forbidden. If you use one, prepare to die.</p>
-		<h2>Public Mii/Mii Police/12 accounts/impostoring popular Miiverse users</h2>
-		<p>You're not funny, and you won't have any mercy laid on yourself. You'll know if you're doing this.</p>
-		<h2>Childish avatars/names, deformed Miis</h2>
-		<p>Examples are stuff like setting your name to poop, booger, butt, etc. Un-tastefulness isn't welcome. If action is taken on you (like changing your avatar), you're expected to keep it. If you circumvent it once, you are prosecuted to the full extent of the law.</p>
-		<br>
-		<hr>
-		<h2>Annoying the devs</h2>
-		<p>Talking to a developer/admin by commening on their latest post is grounds for a ban. They have many things to do and you commenting on their latest (probably very popular) post is very very annoying, therefore, don't be surprised if you're banned for it. If it's relevant to the post (e.g., feature implementation, then asking about the feature), it's fine, but being totally irreleveant (e.g., asking why your post got deleted on a post having to do with skin) on purpose is a good ban reason.</p>
-		<h2>Followbombing or yeahbombing</h2>
-		<p>The policy on this is that if you're relevant/good/decent in some way, it's okay, otherwise you will (hopefully) be warned or have your follows list/yeahs given deleted entirely.</p>
-		<h2>Joke accounts (miiverse_admin, impostors)</h2>
-		<p>If you make one, it'll make the admins very angry and you will be deleted. Please do not do that.</p>
-		<h2>Impact font memes</h2>
-		<p>These are strictly forbidden and will be deleted immediately. Unironic top text/bottom text memes are not allowed, and you will be warned if it is all you post.</p>
-		<br>
-		<h2>No avatars</h2>
-		<p>If you don't have an avatar, the chances of you getting banned by any rule is massively increased, and the admins can do literally anything they want with you.</p>
+		<p>Please do not spam. This includes Yeahing lots of things, following lots of people, sending lots of messages, etc. Just do what's necessary.</p>
+		<h2>Hate speech</h2>
+		<p>The policy is that if you're being reasonable, it's fine. If you're obnoxious and unreasonable with all of it, you will be warned.</p>
+		<h2>Hacking</h2>
+		<p>If you're taking blind stabs at everything, consider <a href="https://github.com/ariankordi/closedverse">taking a look at the source</a>.
+		<br>Login attempts are logged. Please do not do anything bad.</p>
+		<h2>Public/joke accounts</h2>
+		<p>They are unpleasant and nobody likes them. Please do not. You will be warned if you make a joke account, and public accounts (as in, accounts that have the password posted) will just be deleted.</p>
+		<h2>Raids</h2>
+		<p>Raid accounts will be deleted as soon as they exist. <b>If you're raiding another site, please do not discuss it here</b>.</p>
 		<br>
 		<hr>
 		<h2>Repeals</h2>
-		<p>Unless you're too bad, you can get more chances. If we still don't like your behavior, you'll be returned to the state you were. You can probably repeal by emailing an admin or talking to them on Discord or something, I don't know.</p>
-		<h2>Begging for an unban</h2>
-		<p>If you only do it in one session, you'll be forgiven. If you do not stop begging an admin for an unban on a separate messaging site, you will be ignored unless you write a beautifully structured repeal asking why you should have an unban.</p>
-		<h2>Begging to be MODERATOR/admin</h2>
-		<p>If it is all you do, you will be given some restrictions :)</p>
-		<br>
-		<br><h2>Age</h2>
-		<p>Most of the time, it's just a number. We don't explicitly allow users under 13 to join, but if you are found being immature and you are under 13 (or 12), you'll be notified. If You Type Like This, You Will Probably Be Dinged As An Example.</p>
-		<hr>
-		<h2>Names/branding</h2>
-		<p>I would not advise making anything fanmade for this or about this without vague approval.</p>
-		<h3>What not to call this</h3>
-		<ul>
-		<li>ClosedVerse</li>
-		<li>CV</li>
-		<li>Openverse</li>
-		<li>Miiverse, or Miiverse 2.0</li>
-		</ul>
-		<h3>What to call this</h3>
-		<ul>
-		<li>Closedverse</li>
-		<li>Closed</li>
-		</ul><br>
-		<p>If you do make any fanmade content for or about this, don't expect it to be alive, and be ready for it to be taken down by me only because I don't want that many stuff like that for this, and if I do then it'll be official and not user content.</p>
-		<br><br>
+		<p>If you want to be unbanned, try talking to an admin. Any form of contact is supported, they just need to get your message and we'll see if you can be unbanned.
+		<br>This site was made by people who were mercilessly banned from many other sites without them accepting repeals, so we'll probably forgive you at some point.</p>
+		<h2>Begging for moderator status</h2>
+		<p>If you <i>only</i> beg for mod status and do nothing else on the service, you will probably be given a warning, if not a ban. Please do not.</p>
+		<h2>Age</h2>
+		<p>Age is a mostly just a number. However: the <i>"official"</i> minimum age is 13. If you're under 13 and you act immaturely, you will be warned.</p>
+		<br><hr>
 		<h2>Wow, this is way too strict. I am dissatisfied.</h2>
-		<p>If you're unhappy with any of these rules, please keep in mind that <b>these rules are created for a reason</b> and are more of reminders. Admins do not strictly follow all of these. They're mostly here so that users can understand what type of person you should be here.<br>If you contact an admin in regards to a rule, they'll probably clarify it for you.</p>
+		<p>I'm sorry if the rules appear too long or strict. This page has been re-done 2 times so far, and it has attempted to be simplistic, but it is not, and we have tried our hardest to make it appear as simple as possible.
+		<br>Chances are that if you aren't unpleasant, not all of these rules will be strictly enforced.</p>
       </div>
   </div>
 </div>
