--- a/closedverse_main/templates/closedverse_main/comment-view.html
+++ b/closedverse_main/templates/closedverse_main/comment-view.html
@@ -5,7 +5,7 @@
 <div class="post-list-outline">
   <a class="post-permalink-button info-ticker" href="{% url "main:post-view" comment.original_post.id %}">
 	<span class="icon-container"><img src="{% avatar comment.original_post.creator comment.original_post.feeling %}" class="icon"></span>
-    <span>View <span class="post-user-description">{{ comment.original_post.creator.nickname }}'s post ({{ comment.original_post.trun|truncatechars:35 }})</span> for this comment.</span>
+    <span>View <span class="post-user-description" {% if comment.original_post.creator.color %}style=color:{{ comment.original_post.creator.color }}{% endif %}>{{ comment.original_post.creator.nickname }}'s post ({{ comment.original_post.trun|truncatechars:35 }})</span> for this comment.</span>
   </a>
 </div>
 <div class="post-list-outline more">
@@ -24,7 +24,7 @@
       <div class="user-content">
         {% user_icon_container comment.creator comment.feeling %}
         <div class="user-name-content">
-          <p class="user-name"><a href="{% url "main:user-view" comment.creator.username %}">{{ comment.creator.nickname }}</a></p>
+          <p class="user-name"><a {% if comment.creator.color %}style=color:{{ comment.creator.color }}{% endif %} href="{% url "main:user-view" comment.creator.username %}">{{ comment.creator.nickname }}</a></p>
           <p class="timestamp-container">
             <span class="spoiler-status{% if comment.spoils %} spoiler{% endif %}">Spoilers ·</span>
             <span class="timestamp">{% time comment.created %}</span>     
