--- a/closedverse_main/templates/closedverse_main/elements/p_username.html
+++ b/closedverse_main/templates/closedverse_main/elements/p_username.html
@@ -1,1 +1,1 @@
-<p class="user-name"><a href="{% url "main:user-view" user.username %}">{{ user.nickname }}</a><span class="user-id">{{ user.username }}</span></p>
+<p class="user-name"><a {% if user.color %}style=color:{{ user.color }}{% endif %} href="{% url "main:user-view" user.username %}">{{ user.nickname }}</a><span class="user-id">{{ user.username }}</span></p>
